/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

 syntax = "proto3";

 option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";
 
 import "validator.proto";
 package ukama.events.v1;

 message EventSubscriberAdded{
    string firstName = 1 [json_name = "first_name"];
    string lastName = 2 [json_name = "last_name"];
    string subscriberId = 3 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "subscriber_id"];
    string networkId = 4 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "network_id"];
    string email  = 5;
    string phoneNumber  = 6 [json_name = "phone_number"];
    string createdAt = 7;
    string dob = 8 [json_name = "date_of_birth"];
    string gender = 9;
}

message EventSubscriberDeleted{
    string subscriberId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "subscriber_id"];
}
